compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__float_operators.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 100
expression: "\npub fn go() {\n    1.0 +. 1.4 // => 2.4\n    5.0 -. 1.5 // => 3.5\n    5.0 /. 2.0 // => 2.5\n    3.0 *. 3.1 // => 9.3\n\n    2.0 >. 1.0  // => True\n    2.0 <. 1.0  // => False\n    2.0 >=. 1.0 // => True\n    2.0 <=. 1.0 // => False\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
    1.0 +. 1.4 // => 2.4
    5.0 -. 1.5 // => 3.5
    5.0 /. 2.0 // => 2.5
    3.0 *. 3.1 // => 9.3

    2.0 >. 1.0  // => True
    2.0 <. 1.0  // => False
    2.0 >=. 1.0 // => True
    2.0 <=. 1.0 // => False
}


----- COMPILED JAVASCRIPT
export function go() {
  1.0 + 1.4;
  5.0 - 1.5;
  5.0 / 2.0;
  3.0 * 3.1;
  2.0 > 1.0;
  2.0 < 1.0;
  2.0 >= 1.0;
  return 2.0 <= 1.0;
}
