compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__float_scientific_literals.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 37
expression: "\npub fn go() {\n  0.01e-1\n  0.01e-0\n  -10.01e-1\n  -10.01e-0\n  -100.001e-523\n  -100.001e-123_456_789\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  0.01e-1
  0.01e-0
  -10.01e-1
  -10.01e-0
  -100.001e-523
  -100.001e-123_456_789
}


----- COMPILED JAVASCRIPT
export function go() {
  0.001;
  0.01;
  -1.001;
  -10.01;
  -0.0;
  return -0.0;
}
