compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__inf_float_case_statement.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 459
expression: "\npub fn main(x) {\n  case x {\n  100.001e123_456_789 -> \"wobble\"\n    _ -> \"wibble\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
  100.001e123_456_789 -> "wobble"
    _ -> "wibble"
  }
}


----- ERROR
error: Float outside of valid range
  ┌─ /src/one/two.gleam:4:3
  │
4 │   100.001e123_456_789 -> "wobble"
  │   ^^^^^^^^^^^^^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.
