compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__int_divide_complex_expr.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 72
expression: "\npub fn go() {\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } / 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  case 1 >= 0 {
    True -> 2
    False -> 4
  } / 2
}


----- COMPILED JAVASCRIPT
export function go() {
  return globalThis.Math.trunc(
    (() => {
      let $ = 1 >= 0;
      if ($) {
        return 2;
      } else {
        return 4;
      }
    })() / 2
  );
}
