compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__int_equality.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 155
expression: "\npub fn go() {\n  1 != 2\n  1 == 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1 != 2
  1 == 2
}


----- COMPILED JAVASCRIPT
export function go() {
  1 !== 2;
  return 1 === 2;
}
