compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__int_literals.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 5
expression: "\npub fn go() {\n  1\n  2\n  -3\n  4001\n  0b00001111\n  0o17\n  0xF\n  1_000\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1
  2
  -3
  4001
  0b00001111
  0o17
  0xF
  1_000
}


----- COMPILED JAVASCRIPT
export function go() {
  1;
  2;
  -3;
  4001;
  0b1111;
  0o17;
  0xF;
  return 1_000;
}
