compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__int_negation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 225
expression: "\npub fn go() {\n  let a = 3\n  let b = -a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  let a = 3
  let b = -a
}


----- COMPILED JAVASCRIPT
export function go() {
  let a = 3;
  let b = - a;
  return b;
}
