compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__int_operators.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 53
expression: "\npub fn go() {\n  1 + 1 // => 2\n  5 - 1 // => 4\n  5 / 2 // => 2\n  3 * 3 // => 9\n  5 % 2 // => 1\n  2 > 1  // => True\n  2 < 1  // => False\n  2 >= 1 // => True\n  2 <= 1 // => False\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1 + 1 // => 2
  5 - 1 // => 4
  5 / 2 // => 2
  3 * 3 // => 9
  5 % 2 // => 1
  2 > 1  // => True
  2 < 1  // => False
  2 >= 1 // => True
  2 <= 1 // => False
}


----- COMPILED JAVASCRIPT
export function go() {
  1 + 1;
  5 - 1;
  globalThis.Math.trunc(5 / 2);
  3 * 3;
  5 % 2;
  2 > 1;
  2 < 1;
  2 >= 1;
  return 2 <= 1;
}
