compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__operator_precedence.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 203
expression: "\npub fn go() {\n  2.4 *. { 3.5 +. 6.0 }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  2.4 *. { 3.5 +. 6.0 }
}


----- COMPILED JAVASCRIPT
export function go() {
  return 2.4 * (3.5 + 6.0);
}
